--- a/categories.html
+++ b/categories.html
@@ -2,63 +2,69 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Categories | Trendora</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Categories | Trendora</title>
+  <link rel="stylesheet" href="css/categories.css" />
+  <link rel="stylesheet" href="css/responsive.css" />
 </head>
 
 <body>
-    <!-- Navbar -->
-    <header class="navbar">
-        <div class="logo">Trendora</div>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="products.html">Products</a></li>
-                <li><a href="category.html" class="active">Categories</a></li>
-                <li><a href="cart.html">Cart</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+  <!-- Navbar -->
+  <header class="navbar">
+    <div class="container navbar-container">
+      <div class="logo">Trendora</div>
+      <nav>
+        <ul class="nav-links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="products.html">Products</a></li>
+          <li><a href="categories.html" class="active">Categories</a></li>
+          <li><a href="cart.html">Cart</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-    <!-- Category Section -->
-    <section class="category-section">
-        <h1 class="section-title">Shop by Category</h1>
-        <div class="category-grid">
-            <div class="category-card">
-                <img src="images/fashion.jpg" alt="Fashion">
-                <h3>Fashion</h3>
-                <p>Latest trends in clothing & accessories</p>
-            </div>
-            <div class="category-card">
-                <img src="images/electronics.jpg" alt="Electronics">
-                <h3>Electronics</h3>
-                <p>Modern gadgets and appliances</p>
-            </div>
-            <div class="category-card">
-                <img src="images/home.jpg" alt="Home Decor">
-                <h3>Home Decor</h3>
-                <p>Style your space beautifully</p>
-            </div>
-            <div class="category-card">
-                <img src="images/beauty.jpg" alt="Beauty">
-                <h3>Beauty</h3>
-                <p>Makeup, skincare & self-care</p>
-            </div>
-        </div>
-    </section>
+  <!-- Category Section -->
+  <section class="category-section container">
+    <h1 class="section-title">Shop by Category</h1>
+    <p class="slogan">Where Trends Meet Their Aura</p>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <p>&copy; 2025 Trendora | Where Trends Meet Their Aura.</p>
-    </footer>
+    <div class="category-grid">
+      <div class="category-card">
+        <img src="images/fashion.jpg" alt="Fashion" />
+        <h3>Fashion</h3>
+        <p>Latest trends in clothing & accessories</p>
+      </div>
+      <div class="category-card">
+        <img src="images/electronics.jpg" alt="Electronics" />
+        <h3>Electronics</h3>
+        <p>Modern gadgets and appliances</p>
+      </div>
+      <div class="category-card">
+        <img src="images/home.jpg" alt="Home Decor" />
+        <h3>Home Decor</h3>
+        <p>Style your space beautifully</p>
+      </div>
+      <div class="category-card">
+        <img src="images/beauty.jpg" alt="Beauty" />
+        <h3>Beauty</h3>
+        <p>Makeup, skincare & self-care</p>
+      </div>
+    </div>
+  </section>
 
-    <!-- Scroll to Top -->
-    <button class="scroll-top" onclick="window.scrollTo({ top: 0, behavior: 'smooth' });">↑</button>
+  <!-- Footer -->
+  <footer class="footer">
+    <p>&copy; 2025 Trendora | Where Trends Meet Their Aura.</p>
+  </footer>
+
+  <!-- Scroll to Top -->
+  <button class="scroll-top" onclick="window.scrollTo({ top: 0, behavior: 'smooth' });" title="Scroll to top">
+    ↑
+  </button>
 </body>
 
 </html>
