--- a/cart.html
+++ b/cart.html
@@ -3,41 +3,46 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Trendora | Cart</title>
-  <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="css/responsive.css" />
   <link rel="stylesheet" href="css/cart.css" />
+  <link rel="stylesheet" href="css/responsive.css" />
 </head>
 
 <body>
   <!-- Navbar -->
   <header class="navbar">
-    <div class="logo">TRENDORA</div>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="products.html">Products</a></li>
-        <li><a href="category.html">Categories</a></li>
-        <li><a href="cart.html" class="active">Cart</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
+    <div class="container navbar-container">
+      <div class="logo">TRENDORA</div>
+      <nav>
+        <ul class="nav-links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="products.html">Products</a></li>
+          <li><a href="categories.html">Categories</a></li>
+          <li><a href="cart.html" class="active">Cart</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <!-- Cart Section -->
-  <section class="cart-section">
+  <section class="cart-section container">
     <h1>Your Shopping Cart</h1>
     <div class="cart-container">
       <div class="cart-item">
         <img src="images/product1.png" alt="Product Image" />
         <div class="item-details">
           <h3>Product Title</h3>
-          <p>Price: ₹999</p>
-          <input type="number" min="1" value="1" class="quantity-input" />
+          <p class="price">Price: ₹999</p>
+          <label>
+            Qty:
+            <input type="number" min="1" value="1" class="quantity-input" />
+          </label>
           <button class="remove-btn">Remove</button>
         </div>
       </div>
+
       <!-- Add more cart-item divs as needed -->
     </div>
 
@@ -48,14 +53,12 @@
   </section>
 
   <!-- Scroll to Top Button -->
-  <button id="scrollToTop">↑</button>
+  <button class="scroll-top" title="Scroll to top" onclick="window.scrollTo({ top: 0, behavior: 'smooth' });">↑</button>
 
   <!-- Footer -->
   <footer class="footer">
     <p>© 2025 Trendora. Where Trends Meet Their Aura.</p>
   </footer>
-
-  <script src="js/main.js"></script>
 </body>
 
 </html>
