--- a/product-view.html
+++ b/product-view.html
@@ -2,52 +2,72 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Product Details | Trendora</title>
   <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="css/products.css" />
-  <link rel="stylesheet" href="css/responsive.css" />
+  <link rel="stylesheet" href="css/productview.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet" />
 </head>
 <body>
+
   <!-- Navbar -->
-  <header class="navbar">
+  <nav class="navbar">
     <div class="container">
-      <a href="index.html" class="logo">Trendora</a>
-      <nav>
-        <ul class="nav-links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="products.html">Products</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="cart.html">Cart</a></li>
-        </ul>
-      </nav>
+      <a href="index.html" class="logo">
+        <img src="assets/images/logo/trendora-blackbg-whiteletters.png" alt="Trendora Logo" />
+      </a>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="products.html" class="active">Shop</a></li>
+        <li><a href="categories.html">Categories</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+      <div class="nav-icons">
+        <a href="cart.html" title="Cart"><img src="assets/icons/cart-white.svg" alt="Cart" /></a>
+        <button class="nav-toggle" aria-label="toggle menu">
+          <span></span><span></span><span></span>
+        </button>
+      </div>
     </div>
-  </header>
+  </nav>
 
   <!-- Product View Section -->
-  <section class="product-view container">
-    <div class="product-view-grid">
-      <div class="product-img placeholder"></div>
-      <div class="product-details">
-        <h2>Minimalist Watch</h2>
-        <p class="price">$149</p>
-        <p class="description">
-          A timeless piece of modern fashion. Crafted with elegance, this minimalist watch combines durability with sleek design. Perfect for every occasion.
-        </p>
-        <button class="btn">Add to Cart</button>
+  <section class="product-view-section">
+    <div class="container product-view-container">
+      
+      <div class="product-image">
+        <img src="images/product1.png" alt="Product Image" />
       </div>
+
+      <div class="product-details">
+        <h1 class="product-title">Stylish Modern Jacket</h1>
+        <p class="product-price">₹3,499</p>
+        <p class="product-description">
+          This stylish modern jacket is perfect for all seasons. Crafted with premium materials, it offers both comfort and durability.
+        </p>
+
+        <form class="add-to-cart-form" action="#" method="POST">
+          <label for="quantity">Quantity:</label>
+          <input type="number" id="quantity" name="quantity" min="1" value="1" />
+          <button type="submit" class="btn-add-cart">Add to Cart</button>
+        </form>
+
+        <div class="product-meta">
+          <p><strong>Category:</strong> Fashion</p>
+          <p><strong>SKU:</strong> 12345-JKT</p>
+          <p><strong>Availability:</strong> In Stock</p>
+        </div>
+      </div>
+      
     </div>
   </section>
 
   <!-- Footer -->
   <footer class="footer">
-    <div class="container">
-      <p>&copy; 2025 Trendora. Where Trends Meet Their Aura.</p>
-    </div>
+    <p>© 2025 Trendora. Where Trends Meet Their Aura.</p>
   </footer>
 
-  <!-- Scroll to Top Button -->
-  <button class="scroll-to-top" onclick="window.scrollTo({ top: 0, behavior: 'smooth' });">&uarr;</button>
+  <script src="js/main.js"></script>
 </body>
 </html>
