--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About Us - Trendora</title>
   <link rel="stylesheet" href="css/about.css" />
+  <link rel="stylesheet" href="css/responsive.css" />
+
 </head>
 <body>
 
