--- a/checkout.html
+++ b/checkout.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Checkout - Trendora</title>
   <link rel="stylesheet" href="css/checkout.css" />
+  <link rel="stylesheet" href="css/responsive.css" />
+
 </head>
 <body>
 
