--- a/order-confirmation.html
+++ b/order-confirmation.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Order Confirmation - Trendora</title>
   <link rel="stylesheet" href="css/order-confirmation.css" />
+  <link rel="stylesheet" href="css/responsive.css" />
+
 </head>
 <body>
 
