--- a/search.html
+++ b/search.html
@@ -6,6 +6,8 @@
   <title>Search Results | Trendora</title>
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/search.css" />
+  <link rel="stylesheet" href="css/responsive.css" />
+
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet" />
 </head>
 <body>
