--- a/checkout.html
+++ b/checkout.html
@@ -6,6 +6,8 @@
   <title>Checkout - Trendora</title>
   <link rel="stylesheet" href="css/checkout.css" />
   <link rel="stylesheet" href="css/responsive.css" />
+  <script src="js/validation.js"></script>
+
 
 </head>
 <body>
