--- a/order.html
+++ b/order.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="css/responsive.css" />
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet" />
+  <script src="js/validation.js"></script>
+
 </head>
 <body>
 
