--- a/products.html
+++ b/products.html
@@ -56,7 +56,9 @@
   <!-- Product Listing Section -->
   <section class="product-list container">
     <div class="product-card">
-      <div class="product-image placeholder"></div>
+      <div class="product-image">
+        <img src="assets/images/minimalist-watch.jpg" alt="Minimalist Watch" />
+      </div>
       <div class="product-info">
         <h3>Minimalist Watch</h3>
         <p class="price">$149</p>
@@ -64,7 +66,9 @@
       </div>
     </div>
     <div class="product-card">
-      <div class="product-image placeholder"></div>
+      <div class="product-image">
+        <img src="assets/images/bluetooth-headphones.jpg" alt="Bluetooth Headphones" />
+      </div>
       <div class="product-info">
         <h3>Bluetooth Headphones</h3>
         <p class="price">$89</p>
@@ -72,7 +76,9 @@
       </div>
     </div>
     <div class="product-card">
-      <div class="product-image placeholder"></div>
+      <div class="product-image">
+        <img src="assets/images/modern-lamp.jpg" alt="Modern Lamp" />
+      </div>
       <div class="product-info">
         <h3>Modern Lamp</h3>
         <p class="price">$59</p>
