--- a/products.html
+++ b/products.html
@@ -12,7 +12,9 @@
   <!-- Navbar -->
   <header class="navbar">
     <div class="container">
-      <a href="index.html" class="logo">Trendora</a>
+      <a href="index.html" class="logo">
+        <img src="assets/images/logo.png" alt="Trendora Logo" />
+      </a>
       <nav>
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
@@ -85,7 +87,6 @@
         <a href="product-view.html" class="btn">View Product</a>
       </div>
     </div>
-    <!-- Add more cards as needed -->
   </section>
 
   <!-- Footer -->
