--- a/products.html
+++ b/products.html
@@ -13,7 +13,7 @@
   <header class="navbar">
     <div class="container">
       <a href="index.html" class="logo">
-        <img src="assets/images/logo.png" alt="Trendora Logo" />
+        <img src="images/logo.png" alt="Trendora Logo" style="height:40px;"/>
       </a>
       <nav>
         <ul class="nav-links">
@@ -59,7 +59,7 @@
   <section class="product-list container">
     <div class="product-card">
       <div class="product-image">
-        <img src="assets/images/minimalist-watch.jpg" alt="Minimalist Watch" />
+        <img src="images/minimalist-watch.jpg" alt="Minimalist Watch" />
       </div>
       <div class="product-info">
         <h3>Minimalist Watch</h3>
@@ -69,7 +69,7 @@
     </div>
     <div class="product-card">
       <div class="product-image">
-        <img src="assets/images/bluetooth-headphones.jpg" alt="Bluetooth Headphones" />
+        <img src="images/bluetooth-headphones.jpg" alt="Bluetooth Headphones" />
       </div>
       <div class="product-info">
         <h3>Bluetooth Headphones</h3>
@@ -79,7 +79,7 @@
     </div>
     <div class="product-card">
       <div class="product-image">
-        <img src="assets/images/modern-lamp.jpg" alt="Modern Lamp" />
+        <img src="images/modern-lamp.jpg" alt="Modern Lamp" />
       </div>
       <div class="product-info">
         <h3>Modern Lamp</h3>
@@ -87,6 +87,7 @@
         <a href="product-view.html" class="btn">View Product</a>
       </div>
     </div>
+    <!-- Add more cards as needed -->
   </section>
 
   <!-- Footer -->
