--- a/products.html
+++ b/products.html
@@ -13,7 +13,7 @@
   <header class="navbar">
     <div class="container">
       <a href="index.html" class="logo">
-        <img src="images/logo.png" alt="Trendora Logo" style="height:40px;"/>
+        <img src="assets/images/logo/trendora.png" alt="Trendora Logo" style="height:40px;"/>
       </a>
       <nav>
         <ul class="nav-links">
