--- a/products.html
+++ b/products.html
@@ -59,7 +59,7 @@
   <section class="product-list container">
     <div class="product-card">
       <div class="product-image">
-        <img src="images/minimalist-watch.jpg" alt="Minimalist Watch" />
+        <img src="assets/icons/minimalist-watch.jpg" alt="Minimalist Watch" />
       </div>
       <div class="product-info">
         <h3>Minimalist Watch</h3>
@@ -69,7 +69,7 @@
     </div>
     <div class="product-card">
       <div class="product-image">
-        <img src="images/bluetooth-headphones.jpg" alt="Bluetooth Headphones" />
+        <img src="assets/icons/bluetooth-headphones.jpg" alt="Bluetooth Headphones" />
       </div>
       <div class="product-info">
         <h3>Bluetooth Headphones</h3>
@@ -79,7 +79,7 @@
     </div>
     <div class="product-card">
       <div class="product-image">
-        <img src="images/modern-lamp.jpg" alt="Modern Lamp" />
+        <img src="assets/icons/modern-lamp.jpg" alt="Modern Lamp" />
       </div>
       <div class="product-info">
         <h3>Modern Lamp</h3>
