--- a/product-view.html
+++ b/product-view.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/productview.css" />
   <link rel="stylesheet" href="css/responsive.css" />
-
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet" />
 </head>
 <body>
@@ -38,16 +37,14 @@
   <section class="product-view-section">
     <div class="container product-view-container">
       
-      <div class="product-image">
-        <img src="images/product1.png" alt="Product Image" />
+      <div class="product-image" id="product-image">
+        <!-- Image will be inserted by JS -->
       </div>
 
       <div class="product-details">
-        <h1 class="product-title">Stylish Modern Jacket</h1>
-        <p class="product-price">₹3,499</p>
-        <p class="product-description">
-          This stylish modern jacket is perfect for all seasons. Crafted with premium materials, it offers both comfort and durability.
-        </p>
+        <h1 class="product-title" id="product-title">Loading...</h1>
+        <p class="product-price" id="product-price"></p>
+        <p class="product-description" id="product-description"></p>
 
         <form class="add-to-cart-form" action="#" method="POST">
           <label for="quantity">Quantity:</label>
@@ -56,9 +53,9 @@
         </form>
 
         <div class="product-meta">
-          <p><strong>Category:</strong> Fashion</p>
-          <p><strong>SKU:</strong> 12345-JKT</p>
-          <p><strong>Availability:</strong> In Stock</p>
+          <p><strong>Category:</strong> <span id="product-category"></span></p>
+          <p><strong>SKU:</strong> <span id="product-sku"></span></p>
+          <p><strong>Availability:</strong> <span id="product-availability"></span></p>
         </div>
       </div>
       
@@ -69,6 +66,73 @@
   <footer class="footer">
     <p>© 2025 Trendora. Where Trends Meet Their Aura.</p>
   </footer>
+
+  <script>
+    // Product data
+    const products = {
+      "minimalist-watch": {
+        title: "Minimalist Watch",
+        price: "$149",
+        description: "A sleek and elegant minimalist watch that complements any outfit.",
+        category: "Fashion",
+        sku: "MW-001",
+        availability: "In Stock",
+        image: "images/minimalist-watch.jpg"
+      },
+      "bluetooth-headphones": {
+        title: "Bluetooth Headphones",
+        price: "$89",
+        description: "Wireless Bluetooth headphones with noise cancellation and long battery life.",
+        category: "Electronics",
+        sku: "BH-002",
+        availability: "In Stock",
+        image: "images/bluetooth-headphones.jpg"
+      },
+      "modern-lamp": {
+        title: "Modern Lamp",
+        price: "$59",
+        description: "A stylish modern lamp that brightens up your living space.",
+        category: "Home",
+        sku: "ML-003",
+        availability: "In Stock",
+        image: "images/modern-lamp.jpg"
+      }
+    };
+
+    // Function to get URL param
+    function getQueryParam(param) {
+      const urlParams = new URLSearchParams(window.location.search);
+      return urlParams.get(param);
+    }
+
+    // Load product data based on URL param
+    function loadProduct() {
+      const productKey = getQueryParam("product") || "minimalist-watch";
+      const product = products[productKey];
+
+      if (!product) {
+        document.getElementById("product-title").textContent = "Product Not Found";
+        document.getElementById("product-price").textContent = "";
+        document.getElementById("product-description").textContent = "Sorry, the product you are looking for does not exist.";
+        document.getElementById("product-category").textContent = "-";
+        document.getElementById("product-sku").textContent = "-";
+        document.getElementById("product-availability").textContent = "-";
+        document.getElementById("product-image").innerHTML = "";
+        return;
+      }
+
+      document.getElementById("product-title").textContent = product.title;
+      document.getElementById("product-price").textContent = product.price;
+      document.getElementById("product-description").textContent = product.description;
+      document.getElementById("product-category").textContent = product.category;
+      document.getElementById("product-sku").textContent = product.sku;
+      document.getElementById("product-availability").textContent = product.availability;
+      document.getElementById("product-image").innerHTML = `<img src="${product.image}" alt="${product.title}" />`;
+    }
+
+    // Run on page load
+    window.onload = loadProduct;
+  </script>
 
   <script src="js/main.js"></script>
 </body>
