--- a/products.html
+++ b/products.html
@@ -64,7 +64,7 @@
       <div class="product-info">
         <h3>Minimalist Watch</h3>
         <p class="price">$149</p>
-        <a href="product-view.html" class="btn">View Product</a>
+        <a href="product-view.html?product=minimalist-watch" class="btn">View Product</a>
       </div>
     </div>
     <div class="product-card">
@@ -74,7 +74,7 @@
       <div class="product-info">
         <h3>Bluetooth Headphones</h3>
         <p class="price">$89</p>
-        <a href="product-view.html" class="btn">View Product</a>
+        <a href="product-view.html?product=bluetooth-headphones" class="btn">View Product</a>
       </div>
     </div>
     <div class="product-card">
@@ -84,7 +84,7 @@
       <div class="product-info">
         <h3>Modern Lamp</h3>
         <p class="price">$59</p>
-        <a href="product-view.html" class="btn">View Product</a>
+        <a href="product-view.html?product=modern-lamp" class="btn">View Product</a>
       </div>
     </div>
     <!-- Add more cards as needed -->
