--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
         </p>
       </div>
       <div class="intro-image">
-        <img src="images/about-hero.jpg" alt="Fashion and Style" />
+        <img src="assets/icons/about-hero.jpg" alt="Fashion and Style" />
       </div>
     </section>
 
