--- a/product-view.html
+++ b/product-view.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -37,7 +37,6 @@
   <section class="product-view-section">
     <div class="container product-view-container">
       
-      <!-- Single product image -->
       <div class="product-image" id="product-image">
         <!-- Image inserted by JS -->
       </div>
@@ -47,7 +46,7 @@
         <p class="product-price" id="product-price"></p>
         <p class="product-description" id="product-description"></p>
 
-        <form class="add-to-cart-form" action="#" method="POST">
+        <form class="add-to-cart-form" id="add-to-cart-form">
           <label for="quantity">Quantity:</label>
           <input type="number" id="quantity" name="quantity" min="1" value="1" />
           <button type="submit" class="btn-add-cart">Add to Cart</button>
@@ -72,7 +71,7 @@
     const products = {
       "minimalist-watch": {
         title: "Minimalist Watch",
-        price: "$149",
+        price: 149,
         description: "A sleek and elegant minimalist watch that complements any outfit.",
         category: "Fashion",
         sku: "MW-001",
@@ -81,7 +80,7 @@
       },
       "bluetooth-headphones": {
         title: "Bluetooth Headphones",
-        price: "$89",
+        price: 89,
         description: "Wireless Bluetooth headphones with noise cancellation and long battery life.",
         category: "Electronics",
         sku: "BH-002",
@@ -90,7 +89,7 @@
       },
       "modern-lamp": {
         title: "Modern Lamp",
-        price: "$59",
+        price: 59,
         description: "A stylish modern lamp that brightens up your living space.",
         category: "Home",
         sku: "ML-003",
@@ -99,7 +98,6 @@
       }
     };
 
-    // Get product key param or default to first product
     function getQueryParam(param) {
       const urlParams = new URLSearchParams(window.location.search);
       return urlParams.get(param);
@@ -108,32 +106,44 @@
     function loadProduct() {
       const productKey = getQueryParam("product") || "minimalist-watch";
       const product = products[productKey];
+      if (!product) return;
 
-      if (!product) {
-        document.getElementById("product-title").textContent = "Product Not Found";
-        document.getElementById("product-price").textContent = "";
-        document.getElementById("product-description").textContent = "Sorry, the product you are looking for does not exist.";
-        document.getElementById("product-category").textContent = "-";
-        document.getElementById("product-sku").textContent = "-";
-        document.getElementById("product-availability").textContent = "-";
-        document.getElementById("product-image").innerHTML = "";
-      } else {
-        document.getElementById("product-title").textContent = product.title;
-        document.getElementById("product-price").textContent = product.price;
-        document.getElementById("product-description").textContent = product.description;
-        document.getElementById("product-category").textContent = product.category;
-        document.getElementById("product-sku").textContent = product.sku;
-        document.getElementById("product-availability").textContent = product.availability;
+      document.getElementById("product-title").textContent = product.title;
+      document.getElementById("product-price").textContent = `₹${product.price}`;
+      document.getElementById("product-description").textContent = product.description;
+      document.getElementById("product-category").textContent = product.category;
+      document.getElementById("product-sku").textContent = product.sku;
+      document.getElementById("product-availability").textContent = product.availability;
 
-        const imageContainer = document.getElementById("product-image");
-        imageContainer.innerHTML = ""; // Clear
+      const image = document.createElement("img");
+      image.src = product.image;
+      image.alt = product.title;
+      image.className = "single-product-image";
+      document.getElementById("product-image").appendChild(image);
 
-        const img = document.createElement("img");
-        img.src = product.image;
-        img.alt = product.title;
-        img.classList.add("single-product-image");
-        imageContainer.appendChild(img);
-      }
+      // Add to cart handler
+      const form = document.getElementById("add-to-cart-form");
+      form.addEventListener("submit", function (e) {
+        e.preventDefault();
+        const quantity = parseInt(document.getElementById("quantity").value);
+        const cart = JSON.parse(localStorage.getItem("cart")) || [];
+
+        const existingIndex = cart.findIndex(item => item.sku === product.sku);
+        if (existingIndex >= 0) {
+          cart[existingIndex].quantity += quantity;
+        } else {
+          cart.push({
+            title: product.title,
+            price: product.price,
+            quantity: quantity,
+            sku: product.sku,
+            image: product.image
+          });
+        }
+
+        localStorage.setItem("cart", JSON.stringify(cart));
+        alert("Added to cart successfully!");
+      });
     }
 
     window.onload = loadProduct;
