--- a/checkout.html
+++ b/checkout.html
@@ -2,94 +2,131 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Checkout - Trendora</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Trendora | Checkout</title>
   <link rel="stylesheet" href="css/checkout.css" />
   <link rel="stylesheet" href="css/responsive.css" />
-  <script src="js/validation.js"></script>
-
-
 </head>
 <body>
-
   <!-- Navbar -->
-  <nav class="navbar">
-    <div class="logo">Trendora</div>
-    <div class="nav-links">
-      <a href="index.html">Home</a>
-      <a href="products.html">Shop</a>
-      <a href="cart.html">Cart</a>
-      <a href="contact.html">Contact</a>
+  <header class="navbar">
+    <div class="container navbar-container">
+      <div class="logo">TRENDORA</div>
+      <nav>
+        <ul class="nav-links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="products.html">Products</a></li>
+          <li><a href="categories.html">Categories</a></li>
+          <li><a href="cart.html">Cart</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
     </div>
-  </nav>
+  </header>
 
-  <!-- Checkout Container -->
-  <div class="checkout-container">
-
-    <!-- Shipping Info -->
-    <div class="shipping-info">
-      <h2>Shipping Information</h2>
-      <form>
-        <label for="fullname">Full Name</label>
-        <input type="text" id="fullname" name="fullname" required />
-
-        <label for="email">Email Address</label>
-        <input type="email" id="email" name="email" required />
-
-        <label for="address">Shipping Address</label>
-        <input type="text" id="address" name="address" required />
-
-        <label for="city">City</label>
-        <input type="text" id="city" name="city" required />
-
-        <label for="state">State</label>
-        <input type="text" id="state" name="state" required />
-
-        <label for="zip">ZIP Code</label>
-        <input type="text" id="zip" name="zip" required />
-
-        <label for="country">Country</label>
-        <select id="country" name="country" required>
-          <option value="">Select Country</option>
-          <option value="India">India</option>
-          <option value="USA">USA</option>
-          <option value="UK">UK</option>
-        </select>
-      </form>
+  <!-- Checkout Section -->
+  <section class="checkout-section container">
+    <h1>Checkout</h1>
+    <div id="order-summary" class="order-summary">
+      <h2>Your Order</h2>
+      <div id="order-items">
+        <!-- Order items injected by JS -->
+      </div>
+      <div class="order-total">
+        Total: ₹<span id="order-total">0</span>
+      </div>
     </div>
 
-    <!-- Order Summary -->
-    <div class="order-summary">
-      <h2>Order Summary</h2>
-      <div class="order-item">
-        <span>Product Name 1</span>
-        <span>₹499</span>
-      </div>
-      <div class="order-item">
-        <span>Product Name 2</span>
-        <span>₹699</span>
-      </div>
-      <div class="total">
-        <span>Total:</span>
-        <span>₹1198</span>
-      </div>
+    <form id="shipping-form" class="shipping-form">
+      <h2>Shipping Details</h2>
+      <label for="fullName">Full Name</label>
+      <input type="text" id="fullName" name="fullName" required />
 
-      <button class="place-order-btn" onclick="placeOrder()">Place Order</button>
-    </div>
+      <label for="address">Address</label>
+      <textarea id="address" name="address" rows="3" required></textarea>
 
-  </div>
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" required />
+
+      <label for="phone">Phone Number</label>
+      <input type="tel" id="phone" name="phone" required />
+
+      <button type="submit">Place Order</button>
+    </form>
+  </section>
+
+  <!-- Scroll to Top Button -->
+  <button class="scroll-top" title="Scroll to top" onclick="window.scrollTo({ top: 0, behavior: 'smooth' });">↑</button>
 
   <!-- Footer -->
-  <footer>
-    &copy; 2025 Trendora. Where Trends Meet Their Aura.
+  <footer class="footer">
+    <p>© 2025 Trendora. Where Trends Meet Their Aura.</p>
   </footer>
 
   <script>
-    function placeOrder() {
-      alert("Your order has been placed successfully!");
-      window.location.href = "order-confirmation.html";
-    }
-  </script>
+    // Load cart and render order summary
+    function loadOrderSummary() {
+      const orderItemsContainer = document.getElementById("order-items");
+      const orderTotalSpan = document.getElementById("order-total");
+      const cart = JSON.parse(localStorage.getItem("cart")) || [];
 
+      orderItemsContainer.innerHTML = "";
+      let total = 0;
+
+      if (cart.length === 0) {
+        orderItemsContainer.innerHTML = "<p>Your cart is empty.</p>";
+        orderTotalSpan.textContent = "0";
+        return;
+      }
+
+      cart.forEach(item => {
+        const itemTotal = item.price * item.quantity;
+        total += itemTotal;
+
+        const itemDiv = document.createElement("div");
+        itemDiv.className = "order-item";
+        itemDiv.innerHTML = `
+          <span class="item-name">${item.title}</span>
+          <span class="item-qty">x${item.quantity}</span>
+          <span class="item-price">₹${itemTotal}</span>
+        `;
+        orderItemsContainer.appendChild(itemDiv);
+      });
+
+      orderTotalSpan.textContent = total;
+    }
+
+    // Handle form submission
+    document.getElementById("shipping-form").addEventListener("submit", function (e) {
+      e.preventDefault();
+      const cart = JSON.parse(localStorage.getItem("cart")) || [];
+
+      if (cart.length === 0) {
+        alert("Your cart is empty.");
+        return;
+      }
+
+      const fullName = this.fullName.value.trim();
+      const address = this.address.value.trim();
+      const email = this.email.value.trim();
+      const phone = this.phone.value.trim();
+      const total = document.getElementById("order-total").textContent;
+
+      alert(
+        `Thank you for your order, ${fullName}!\n` +
+        `Total Amount: ₹${total}\n` +
+        `Shipping to:\n${address}\n` +
+        `We will contact you at ${email} or ${phone}.`
+      );
+
+      // Clear cart after order placed
+      localStorage.removeItem("cart");
+
+      // Redirect to home or order confirmation page
+      window.location.href = "index.html"; // Change if you have order confirmation page
+    });
+
+    document.addEventListener("DOMContentLoaded", loadOrderSummary);
+  </script>
 </body>
 </html>
