--- a/categories.html
+++ b/categories.html
@@ -34,22 +34,22 @@
 
     <div class="category-grid">
       <div class="category-card">
-        <img src="images/fashion.jpg" alt="Fashion" />
+        <img src="assets/icons/fashion.jpg" alt="Fashion" />
         <h3>Fashion</h3>
         <p>Latest trends in clothing & accessories</p>
       </div>
       <div class="category-card">
-        <img src="images/electronics.jpg" alt="Electronics" />
+        <img src="assets/icons/electronics.jpg" alt="Electronics" />
         <h3>Electronics</h3>
         <p>Modern gadgets and appliances</p>
       </div>
       <div class="category-card">
-        <img src="images/home.jpg" alt="Home Decor" />
+        <img src="assets/icons/home-decor.jpg" alt="Home Decor" />
         <h3>Home Decor</h3>
         <p>Style your space beautifully</p>
       </div>
       <div class="category-card">
-        <img src="images/beauty.jpg" alt="Beauty" />
+        <img src="assets/icons/beauty.jpg" alt="Beauty" />
         <h3>Beauty</h3>
         <p>Makeup, skincare & self-care</p>
       </div>
