--- a/products.html
+++ b/products.html
@@ -88,7 +88,7 @@
 
     <div class="product-card" data-category="beauty" data-price="99">
       <div class="product-image">
-        <img src="assets/icons/beauty-kit.jpg" alt="Beauty Kit" />
+        <img src="assets/icons/beauty.jpg" alt="Beauty Kit" />
       </div>
       <div class="product-info">
         <h3>Deluxe Beauty Kit</h3>
