--- a/products.html
+++ b/products.html
@@ -60,7 +60,7 @@
       <div class="product-info">
         <h3>Minimalist Watch</h3>
         <p class="price">$149</p>
-        <a href="#" class="btn">View Product</a>
+        <a href="product-view.html?product=minimalist-watch" class="btn">View Product</a>
       </div>
     </div>
 
@@ -71,7 +71,7 @@
       <div class="product-info">
         <h3>Bluetooth Headphones</h3>
         <p class="price">$89</p>
-        <a href="#" class="btn">View Product</a>
+        <a href="product-view.html?product=bluetooth-headphones" class="btn">View Product</a>
       </div>
     </div>
 
@@ -82,7 +82,7 @@
       <div class="product-info">
         <h3>Modern Lamp</h3>
         <p class="price">$59</p>
-        <a href="#" class="btn">View Product</a>
+        <a href="product-view.html?product=modern-lamp" class="btn">View Product</a>
       </div>
     </div>
 
@@ -93,7 +93,7 @@
       <div class="product-info">
         <h3>Deluxe Beauty Kit</h3>
         <p class="price">$99</p>
-        <a href="#" class="btn">View Product</a>
+        <a href="product-view.html?product=beauty" class="btn">View Product</a>
       </div>
     </div>
   </section>
